--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
         p {
             font-size: 18px;
         }
+        .whatsapp-link {
+            display: inline-block;
+            margin-top: 20px;
+        }
+        .whatsapp-link img {
+            width: 50px;
+            height: 50px;
+        }
     </style>
 </head>
 <body>
@@ -32,6 +40,11 @@
         <h1>Masa Aktif Website Ini Telah Habis</h1>
         <p>Untuk melanjutkan akses, silakan hubungi <strong>luhh</strong> untuk perpanjangan website.</p>
         <p>Jika Anda memiliki pertanyaan, kirim pesan ke luhh.</p>
+        <div class="whatsapp-link">
+            <a href="https://wa.me/628989737043?text=Halo%20luhh,%20saya%20ingin%20perpanjang%20website" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6b/WhatsApp.svg/512px-WhatsApp.svg.png" alt="WhatsApp Logo">
+            </a>
+        </div>
     </div>
 </body>
 </html>
